# dynamic_bar

./: Cargo.toml  flake.nix  justfile  shell.nix
src/: hypr.rs  inputs.rs  layer.rs  main.rs  socket.rs  window.rs
