[package]
name = "dynamic_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
evdev = "0.13.2"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
iced = { version = "0.14.0", features = ["advanced"]}
iced_layershell = "0.17.1"
rustc-hash = "2.1.2"
tokio = { version = "1.52.1", features = ["full"]}
tokio-util = "0.7.18"
tokio-utils = "0.1.2"
